--- a/src/Mastercel/ChartBundle/Resources/views/Default/index.html.twig
+++ b/src/Mastercel/ChartBundle/Resources/views/Default/index.html.twig
@@ -2,10 +2,10 @@
 {% block javascript %}
 <script type="text/javascript">
 var data = [{
-    name: 'Pablo',
+    name: 'Apple',
     data: [3000, 4750.20, 1000,10000,3000,300]
 }, {
-    name: 'Rosa',
+    name: 'Orange',
     data: [5300, 7000, 3430,1200,3200,1200,1000]
 }];
 	$(function () { 	    
